@@ -9,6 +9,7 @@ set(lua_test_maps
   "bugs/526_get_entities_same_region"
   "bugs/656_map_set_world"
   "bugs/664_chest_get_set_treasure"
+  "bugs/667_hero_save_solid_ground_callback"
   "bugs/669_entity_get_sprite"
   "bugs/670_map_get_entities_no_hero"
   "bugs/671_collision_test_not_moving"
