@@ -13,4 +13,6 @@ function game_meta:on_started()
 
   local hero = self:get_hero()
   hero:set_tunic_sprite_id("main_heroes/edgar")
+  self:set_max_life(40)
+  self:set_life(self:get_max_life())
 end
