@@ -1,0 +1,51 @@
+properties{
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  min_layer = 0,
+  max_layer = 2,
+  tileset = "castle",
+}
+
+tile{
+  layer = 0,
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  pattern = "3",
+}
+
+custom_entity{
+  name = "hole_1",
+  layer = 0,
+  x = 24,
+  y = 29,
+  direction = 0,
+}
+
+destination{
+  name = "destination",
+  layer = 0,
+  x = 24,
+  y = 29,
+  direction = 1,
+}
+
+custom_entity{
+  name = "hole_2",
+  layer = 0,
+  x = 56,
+  y = 29,
+  direction = 0,
+}
+
+custom_entity{
+  name = "hole_3",
+  layer = 0,
+  x = 88,
+  y = 29,
+  direction = 0,
+}
+
