@@ -94,6 +94,7 @@ Changes that do not introduce incompatibilities:
 * Add a method entity:get_sprites() (#851).
 * Add methods entity:bring_sprite_to_front/back() (#809).
 * enemy/custom_entity:create_sprite() now take an optional name value.
+* hero:save_solid_ground() can now take a function parameter (#667).
 * Add a method hero:start_attack() (#821).
 * Add methods npc:is/set_traversable() (#712).
 * Add methods chest:get/set_treasure() (#664).
